--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,6 @@ MONGOLAB_URI=mongodb://localhost:27017/test
 
 SESSION_SECRET=Rotten-potato-monkey
 
-GOOGLE_ID=828110519058.apps.googleusercontent.com
-GOOGLE_SECRET=JdZsIaWhUFIchmC1a_IZzOHb
+GOOGLE_ID=732382892254-lsi5pmbldq67tubfbcm12ev4sme0h0i1.apps.googleusercontent.com
+GOOGLE_SECRET=0kbh7xc1D6Ii05u3mdbSmgY7
 
