--- a/package.json
+++ b/package.json
@@ -20,17 +20,18 @@
   },
   "homepage": "https://github.com/wrainaud/DonScraper#readme",
   "dependencies": {
+    "aws-sdk": "latest",
+    "express": "latest",
+    "body-parser": "latest",
     "async": "^2.0.0-rc.4",
     "bcrypt-nodejs": "^0.0.3",
     "bitgo": "1.6.1",
-    "body-parser": "^1.15.1",
     "cheerio": "^0.20.0",
     "clockwork": "^0.1.4",
     "compression": "^1.6.1",
     "connect-mongo": "^1.1.0",
     "dotenv": "^2.0.0",
     "errorhandler": "^1.4.3",
-    "express": "^4.13.4",
     "express-flash": "^0.0.2",
     "express-session": "^1.13.0",
     "express-validator": "^2.20.4",
