--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-MONGODB=mongodb://localhost:27017/test
-MONGOLAB_URI=mongodb://localhost:27017/test
+MONGODB=mongodb://heroku_h5hxw6xp:nbvp5qbv4gcd5km0fqvr93ms4i@ds133816.mlab.com:33816/
+MONGOLAB_URI=mongodb://heroku_h5hxw6xp:nbvp5qbv4gcd5km0fqvr93ms4i@ds133816.mlab.com:33816/heroku_h5hxw6xp
 
 SESSION_SECRET=Rotten-potato-monkey
 
