--- a/package.json
+++ b/package.json
@@ -20,18 +20,18 @@
   },
   "homepage": "https://github.com/wrainaud/DonScraper#readme",
   "dependencies": {
-    "aws-sdk": "latest",
-    "express": "latest",
-    "body-parser": "latest",
     "async": "^2.0.0-rc.4",
+    "aws-sdk": "latest",
     "bcrypt-nodejs": "^0.0.3",
     "bitgo": "1.6.1",
+    "body-parser": "latest",
     "cheerio": "^0.20.0",
     "clockwork": "^0.1.4",
     "compression": "^1.6.1",
     "connect-mongo": "^1.1.0",
     "dotenv": "^2.0.0",
     "errorhandler": "^1.4.3",
+    "express": "latest",
     "express-flash": "^0.0.2",
     "express-session": "^1.13.0",
     "express-validator": "^2.20.4",
@@ -48,6 +48,7 @@
     "multer": "^1.1.0",
     "node-sass-middleware": "^0.9.8",
     "nodemailer": "^2.3.2",
+    "nodemon": "^1.12.5",
     "passport": "0.3.2",
     "passport-google-oauth": "^1.0.0",
     "passport-local": "^1.0.0",
