--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,5 @@ SESSION_SECRET=Rotten-potato-monkey
 GOOGLE_ID=732382892254-lsi5pmbldq67tubfbcm12ev4sme0h0i1.apps.googleusercontent.com
 GOOGLE_SECRET=0kbh7xc1D6Ii05u3mdbSmgY7
 
+MAILGUN_USER=master@salty-savannah-14358.herokuapp.com
+MAILGUN_PASSWORD=Atreyu
